--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "bootstrap": "^4.3.1",
+    "ngx-bootstrap": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@ng-bootstrap/ng-bootstrap": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
